# fused-render

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  README.md  SECURITY.md  SPEC.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/making-a-release/: SKILL.md
.claude/skills/setting-up-dev-env/: SKILL.md
.github/workflows/: lint.yml  release.yml  test.yml  windows-supervisor.yml
docs/: BASELINE-geotiff-mount.md  BASELINE-map-raster-mount.md  CLAUDE-TEMPLATE-POC.md  DESKTOP_SUPERVISOR.md  EXPORT.md  LINUX_DESKTOP_SPEC.md  PLAN-fused-account.md  PYTHON_SUPERVISOR_SPEC.md  WINDOWS_DESKTOP_ARCHITECTURE.md  WINDOWS_INSTALLER_PLAN.md  bundle-v2-design.md  signing.md  usage.md
docs/superpowers/specs/: 2026-07-08-search-design.md  2026-07-09-history-view-design.md  2026-07-13-canvas-toml-template-design.md  2026-07-14-annotate-live-design.md  2026-07-21-reader-mode-design.md
examples/: broken.toml  plain.toml  sine.html  sine.py
examples/demo_canvas/: aggregate.json  canvas.toml  canvas.toml.json  clean_data.py  load_data.py  make_chart.html  make_chart.md
examples_seed/how_it_works/: demo.py
examples_seed/sine/: sine.py
examples_seed/tutorial/: hello.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  global.d.ts  main.jsx  main.tsx  shell.css
frontend/src/components/: Breadcrumb.jsx  Breadcrumb.tsx  ContextMenu.tsx  DeployModal.tsx  DeploymentErrors.tsx  DeploymentsList.tsx  ErrorBanner.tsx  FileIcons.tsx  FinderIcon.tsx  FsDialogs.tsx  IconPicker.tsx  MenuIcons.tsx  ModeSwitcher.tsx  PaneModeMenu.tsx  RowActionsMenu.tsx  ServerStatusBanner.tsx  ShareIcon.tsx  Sidebar.jsx  Sidebar.tsx  SplitIcons.tsx  Toast.tsx  ToastHost.tsx
frontend/src/lib/: account.ts  api.js  api.ts  bookmark-file.ts  bookmarks.js  bookmarks.ts  format.js  format.ts  fs-actions.ts  fs-clipboard.ts  fuzzy.ts  hooks.js  hooks.ts  layout-codec.js  layout-codec.ts  mountHealth.ts  prefs.ts  recents.ts  router.js  router.ts  session.ts  sidebarstate.ts  toast.ts  tour.ts  ui-overlay.ts  viewstate.ts
frontend/src/views/: Account.tsx  BookmarkOpen.tsx  Connectors.tsx  Listing.jsx  Listing.tsx  Mounts.tsx  Panel.jsx  Panel.tsx  Preferences.tsx  Preview.jsx  Preview.tsx  Tabs.jsx  Tabs.tsx  Templates.tsx
fused_render/: _binding.py  _branch.py  _child.py  _fused_cli.py  _mime_package.py  _view_url_codec.py  account.py  app.py  cli.py  core_templates.py  deeplink.py  deploy.py  desktop_probe.py  engine.py  executor.py  export.py  fusedcli.py  logs.py  menubar_pin.py  paths.py  pin_store.py  server.py  templates_api.py  windows_process.py  winopen.py  wintray.py
fused_render/shell/: CONNECTORS_PROTOTYPE_NOTES.md  __init__.py  bookmarks.py  connectors.py  connectors_prototype.py  gcssign.py  mounts.py  pathops.py  prefetch.py  prefs.py  recents.py  s3sign.py  seed.py  storage.py
fused_render/static/: annotate.js  clone.html  runtime.js  shell-dist  shell.css  shell.html  shell.js
fused_render/static/shell/: main.js  (+4 more)
fused_render/supervisor/: __main__.py  _backend.py  core.py  paths.py  protocol.py  tray.py
fused_render/template_starter/: CLAUDE.md  reader.py  template.html
fused_render/templates/: code_template.html  csv_reader.py  csv_template.html  geotiff_template.html  image_template.html  json_template.html  markdown_template.html  media_template.html  netcdf_template.html  parquet_reader.py  parquet_template.html  pdf_template.html  registry.json  text_template.html  xlsx_reader.py  xlsx_template.html  zarr_template.html
fused_render/win_supervisor/: __main__.py  instance.py  job.py  paths.py  protocol.py  startup.py  supervisor.py  tray.py  update.py
learn/: check_env.py  check_libs.py  hello.py  index.html  index.html.json  list_templates.py  pi.html  pi.py  spiral.html  spiral.py
prototypes/: coalesced_fetch_bench.py
scripts/: app_entry.py  branch_stamp.py  build_dmg.sh  build_linux_appimage.sh  build_windows_installer.ps1  dev.sh  file_associations.json  file_associations.py  hatch_build.py  setup_py2app.py
scripts/download_page/: index.html  write_manifest.py
scripts/linux/: AppRun  fused-render.desktop.in
scripts/vendor-codemirror/: README.md  build.sh  entry.js  package-lock.json  package.json
scripts/vendor-sci/: README.md  build.sh  geotiff-entry.mjs  netcdfjs-entry.mjs  package-lock.json  package.json  pdfjs-entry.mjs  pdfjs-worker-entry.mjs  zarrita-entry.mjs
scripts/vendor-three/: README.md  build.sh  gltf-transform-entry.mjs  package.json  three-entry.mjs
scripts/windows/: MOUNTS.md  gen_file_icons.py  generate_installer_registry.py  generate_update_manifest.py  installer.iss  register_open_with.ps1  unregister_open_with.ps1
skills/fused-render-authoring/: SKILL.md
skills/fused-render-custom-templates/: SKILL.md
skills/fused-render-usage/: SKILL.md
tests/: _mount_safe_helpers.py  conftest.py  test_account.py  test_annotate_comments.py  test_annotate_live_template.py  test_app_desktop_instance.py  test_app_view_url.py  test_archive_preview_readonly.py  test_branch.py  test_branch_runtime.py  test_branch_stamp.py  test_browse_mount.py  test_canvas_mount.py  test_canvas_template.py  test_claude_agent_sidecar.py  test_condition_gate_seed.py  test_condition_mount_shim.py  test_condition_probe_budget.py  test_conditions_cache.py  test_daemon_reaper.py  test_deeplink.py  test_deploy.py  test_desktop_probe.py  test_docs_readonly.py  test_duckdb_reader.py  test_engine.py  test_excel_readonly.py  test_executor.py  test_export.py  test_file_associations.py  test_fs_raw_bearer_proxy.py  test_fs_raw_pooled_proxy.py  test_fs_raw_warm_read_mount_safe.py  test_fs_walk_bound.py  test_gcs_sign.py  test_geotiff_ltile_mount.py  test_glb_template.py  test_glbmodel_project.py  test_h3_condition.py  test_hatch_build.py  (+78 more)
windows/launcher/: launcher.c  launcher.rc
windows/supervisor/: Cargo.toml  build.rs
windows/supervisor/src/: instance.rs  job.rs  lib.rs  main.rs  paths.rs  protocol.rs  startup.rs  supervisor.rs  tray.rs
(+198 files in other folders)
