[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fused-render"
dynamic = ["version"]
description = "Local file explorer with Python-powered renderable HTML previews"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    # /api/fs/events is a WebSocket (D74); plain uvicorn has no WS protocol
    # implementation, so the ws library is a hard dependency, not an extra.
    "websockets>=12",
    "pyarrow>=14",
    # The duckdb template reads AND edits every tabular file format (parquet,
    # csv/tsv, json) through one engine, so it's a core dependency, not an
    # optional extra — a plain `pip install fused-render` ships the viewer.
    "duckdb>=1.1",
    # FastAPI's /api/templates/import endpoint accepts multipart form/file
    # uploads, which requires python-multipart at import time (FastAPI raises
    # at route registration otherwise).
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Test/dev tooling. `pip install -e ".[dev]"` then `pytest`.
dev = [
    "pytest",
    # fastapi.testclient hard-requires httpx at import time.
    "httpx",
    # Parallel test runs (see [tool.pytest.ini_options] addopts -n auto). The
    # suite is xdist-safe via process isolation: conftest re-points
    # FUSED_RENDER_HOME/DIR per worker, tests use tmp_path + monkeypatch, and
    # servers bind 127.0.0.1:0. Process-based only — os.chdir / importlib.reload
    # would race under a threaded runner.
    "pytest-xdist",
]
# Baked into the bundled CPython of the .app (SPEC DM-2): users of the packaged
# app cannot pip install, so the interpreter ships with the popular data stack.
# Dev installs: pip install -e ".[bundled]"
bundled = [
    "numpy",
    "pandas",
    "requests",
    "polars",
    "matplotlib",
    "scipy",
    "pillow",
    "openpyxl",
    "shapely",
    "geopandas",
    # Preview-template backends. pandoc, typst and usd-core are intentionally
    # absent — they are large per-platform binaries fetched on demand at
    # runtime (see docs/docs.py, docs/install_worker.py, latex/engine.py,
    # usd/convert_worker.py's _ensure_pxr — D119).
    "python-pptx",
    "fpdf2>=2.8.7",
    "msgpack>=1.0",
    "rasterio",
    "zarr",
    "pymupdf>=1.25",
    "pikepdf>=9",
    "drain3>=0.9.11",
]
# Menu-bar app shell (SPEC DM-3/DM-7). macOS-only; not a core dependency so
# `pip install fused-render` stays cross-platform. Only the packaged .app
# build (scripts/build_dmg.sh) installs this extra.
app = [
    "rumps",
    # Pinned view (SPEC §25, D97): WKWebView inside the status-item popover.
    "pyobjc-framework-WebKit",
]
# Optional execution engine (D69): when installed, /api/run runs code through
# the fused local compute backend; absent, the built-in executor runs. Pinned
# to the same wheel `openfused_server` serves hosted pages from, so local and
# hosted execution stay on one build. The engine needs 3.11+; on 3.10 the
# marker skips it and the built-in executor runs.
# The wheel URL must match deploy.PINNED_FUSED_REQUIREMENT (the Deploy modal's
# one-click install, SPEC DP-4) — a test pins the two together.
fused = [
    'fused @ https://fused-magic.s3.us-west-2.amazonaws.com/fused-2.9.3.post7-py3-none-any.whl ; python_version >= "3.11"',
]
# Windows desktop supervisor shell (experiment/python-supervisor,
# docs/PYTHON_SUPERVISOR_SPEC.md). Windows-only; not a core dependency so
# `pip install fused-render` stays cross-platform. Only the packaged desktop
# build (scripts/build_windows_installer.ps1) installs this extra.
windows-desktop = [
    'pywin32>=306 ; sys_platform == "win32"',
    'pystray>=0.19 ; sys_platform == "win32"',
    'pillow ; sys_platform == "win32"',
]

[project.scripts]
fused-render = "fused_render.cli:main"
fused-render-app = "fused_render.app:main"

# No-console launcher for the Explorer "Open with" registration; a dedicated
# exe because the Open With dialog displays a pythonw.exe command as "Python".
[project.gui-scripts]
fused-render-open = "fused_render.winopen:main"

# Run the suite in parallel by default (needs pytest-xdist, in the dev extra).
# -n auto spawns one worker per CPU; the suite is xdist-safe (see the dev-extra
# comment). To debug a single test serially, override: `pytest -n0 -x path::test`.
[tool.pytest.ini_options]
addopts = "-n auto"

# Single source of truth for the version: fused_render/__init__.py's
# __version__. Bump it there only — hatchling reads it at build time for the
# wheel metadata, and the runtime importers (server.py, core_templates.py,
# logs.py) all resolve to the same value.
[tool.hatch.version]
path = "fused_render/__init__.py"

[tool.hatch.metadata]
# The `fused` extra pins a direct wheel URL (not a PyPI dependency) — hatchling
# refuses that unless explicitly allowed.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["fused_render"]
# The Vite-built shell is gitignored (D54) but must ship in the wheel;
# `artifacts` overrides hatchling's VCS-based exclusion for it. The starter
# kit's authoring skills are copied in at build time from skills/ (D106) — also
# gitignored, also shipped here.
artifacts = [
    "fused_render/static/shell-dist/**",
    "fused_render/template_starter/.claude/skills/**",
]

# Builds frontend/ -> fused_render/static/shell-dist/ at package-build time
# (wheel and the DMG pipeline, which pip-installs this repo). Editable
# installs skip it — see scripts/hatch_build.py.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "scripts/hatch_build.py"
