[package]
name = "fused-render-windows-supervisor"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[[bin]]
name = "FusedRender"
path = "src/main.rs"

[dependencies]
image = { version = "=0.25.10", default-features = false, features = ["ico"] }
tray-icon = { version = "=0.24.1", default-features = false }
windows-sys = { version = "=0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "=0.1.20"
